# lab-env

./: .gitignore  CMakeLists.txt  LICENSE  README.md  authors.txt
.github/workflows/: classroom.yml
engine/: CMakeLists.txt  config.cc  config.h
engine/2d/: 2dapp.cc  2dapp.h  CMakeLists.txt
engine/core/: app.cc  app.h
engine/render/: CMakeLists.txt  grid.cc  grid.h  window.cc  window.h
exts/: CMakeLists.txt
exts/glfw/: CMakeLists.txt
exts/imgui/examples/opengl3_example/: imgui_impl_glfw_gl3.cpp
projects/ImGuiExample/code/: exampleapp.cc  exampleapp.h  main.cc
projects/assignment/: CMakeLists.txt
projects/assignment/code/: assignmentapp.cc  assignmentapp.h  main.cc
projects/example/: CMakeLists.txt
projects/example/code/: exampleapp.cc  exampleapp.h  main.cc
vstudio/: AssignmentDemo.vcxproj  AssignmentDemo.vcxproj.filters  gscept-lib.vcxproj  gscept-lib.vcxproj.filters  lab-env.sln  libraries.vcxproj  libraries.vcxproj.filters
